--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = "1.0"
 serde_derive = "1.0"
 
 serde_json = "1.0"
+termcolor = "1"
 wincolor = "0.1"
 walkdir = "2"
 pulldown-cmark = "0.2.0"
